# task-unicum-3d-pechat-cheres-tg

./: rpi.installer.py
PythonProject/: README.md  main.py  pyproject.toml  replit.md
PythonProject/bot/handlers/: admin.py  user.py
PythonProject/bot/services/: drive.py  google_sheets.py  local_db.py  scheduler.py  sheets.py
PythonProject/bot/utils/: config.py  states.py
